objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_District_Code__c</fullName>
        <formula>School__r.District_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account District Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether or not this Student record is active. If checked, then this is the current Student record. If unchecked, this is an old Student record.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_graduation_date__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce. To enter the actual graduation date, update the Actual Graduation Date field on the Contact record.</inlineHelpText>
        <label>Actual graduation date*Retired*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <inlineHelpText>Displays the street address of the student&apos;s home.</inlineHelpText>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Code__c</fullName>
        <inlineHelpText>Displays the admission code assigned to the student.</inlineHelpText>
        <label>Admission Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Re-Admitted in same school.</fullName>
                </value>
                <value>
                    <fullName>New - No prior school experience.</fullName>
                </value>
                <value>
                    <fullName>New - From Outside DC.</fullName>
                </value>
                <value>
                    <fullName>New - From Private DC School.</fullName>
                </value>
                <value>
                    <fullName>Transfer Within LEA.</fullName>
                </value>
                <value>
                    <fullName>Re-Admitted After Withdrawal.</fullName>
                </value>
                <value>
                    <fullName>Assessment for Special Education.</fullName>
                </value>
                <value>
                    <fullName>Entry from other LEA.</fullName>
                </value>
                <value>
                    <fullName>Scheduling Purposes only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_Status__c</fullName>
        <inlineHelpText>Displays the admission status assigned to the student.</inlineHelpText>
        <label>Admission Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Student</fullName>
                </value>
                <value>
                    <fullName>Probationary Student (Academic)</fullName>
                </value>
                <value>
                    <fullName>Probationary Student (Attendance)</fullName>
                </value>
                <value>
                    <fullName>Probationary Student (Behavioral)</fullName>
                </value>
                <value>
                    <fullName>Probationary Student (Other)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advisory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Displays the advisory to which the student is assigned. You can click on the advisory link to see all students related to the advisory section.</inlineHelpText>
        <label>Advisory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Section__c.Advisory__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Students (Advisory)</relationshipLabel>
        <relationshipName>Students1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;MONTH(Date_of_Birth__c),YEAR(TODAY())-YEAR(Date_of_Birth__c),IF(AND(MONTH(TODAY())=MONTH(Date_of_Birth__c),DAY(TODAY())&gt;=DAY(Date_of_Birth__c)),YEAR(TODAY())-YEAR(Date_of_Birth__c),(YEAR(TODAY())-YEAR(Date_of_Birth__c))-1))</formula>
        <inlineHelpText>Displays the student&apos;s age. SchoolForce automatically calculates this value using the student&apos;s birth date entered in the Date of Birth field. You cannot edit this field.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Lang_Comments__c</fullName>
        <inlineHelpText>Displays the alternate language comments entered for the student using the Overall Comments Wizard. This text displays on elementary school report cards and progress reports if the student&apos;s language is not English.</inlineHelpText>
        <label>Alternate Lang Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the student speaks a language other than English.</inlineHelpText>
        <label>Alternate Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>American_Indian_or_Alaska_Native__c</fullName>
        <formula>IF( INCLUDES(Race_Multi__c, &apos;American Indian or Alaska Native&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>American Indian or Alaska Native</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apt__c</fullName>
        <inlineHelpText>Displays the apartment number in the student&apos;s address.</inlineHelpText>
        <label>Apt #</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Displays whether or not this Student record is archived. SchoolForce archives Student records in the Process Data Step of the EOY Wizard. You should never manually update this field.</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asian__c</fullName>
        <formula>IF( INCLUDES(Race_Multi__c, &apos;Asian&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Asian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_FL_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance FL Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Percentage__c</fullName>
        <description>This is the percentage of attendance for a student.</description>
        <formula>IF (Total_Daily_Attendance__c!=0, (Total_Daily_Attendance__c - Non_Present_Daily_Attendance__c)/ Total_Daily_Attendance__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the real-time calculation of the student&apos;s year-to-date percentage of time present at school.</inlineHelpText>
        <label>Attendance Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attendance_Starting_Strong__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This pilot will support teams in launching attendance programming at the very start of the year. With a focus on homerooms with ACMs, teams will identify students within the first month of school who&apos;ve had absences/tardies and provide Tier 2 Attendance Interventions throughout the 1st quarter.</description>
        <label>Attendance: Starting Strong</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Time_Lost__c</fullName>
        <description>This is a rollup of all of the time lost for this student due to attendance labeled &quot;Daily&quot;.</description>
        <inlineHelpText>Displays the student&apos;s total time lost (in minutes) for daily attendance. SchoolForce calculates this by adding the value in the Time Lost Rollup field from all Attendance records in which the Daily check box is selected.</inlineHelpText>
        <label>Daily Attendance Time Lost</label>
        <summarizedField>Attendance__c.Time_Lost_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>Attendance__c.Daily__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendance__c.Student__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attendance</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attending_Summer_School__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to indicate that the student is attending summer school. You can use this field to generate reports on students who are attending summer school.</inlineHelpText>
        <label>Attending Summer School?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Name_2__c</fullName>
        <inlineHelpText>Displays the name of the second person authorized to pick up the student.</inlineHelpText>
        <label>Authorized Pickup Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Name_3__c</fullName>
        <inlineHelpText>Displays the name of the third person authorized to pick up the student.</inlineHelpText>
        <label>Authorized Pickup Name 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Name_4__c</fullName>
        <inlineHelpText>Displays the name of the fourth person authorized to pick up the student.</inlineHelpText>
        <label>Authorized Pickup Name 4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Name__c</fullName>
        <description>Who is authorized to pickup the student?</description>
        <inlineHelpText>Displays the name of the first person authorized to pick up the student.</inlineHelpText>
        <label>Authorized Pickup Name 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Phone_1__c</fullName>
        <inlineHelpText>Displays the phone number for the person listed in the Authorized Pickup Name 1 field.</inlineHelpText>
        <label>Authorized Pickup Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Phone_2__c</fullName>
        <inlineHelpText>Displays the phone number for the person listed in the Authorized Pickup Name 2 field.</inlineHelpText>
        <label>Authorized Pickup Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Phone_3__c</fullName>
        <inlineHelpText>Displays the phone number for the person listed in the Authorized Pickup Name 3 field.</inlineHelpText>
        <label>Authorized Pickup Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Relation_1__c</fullName>
        <inlineHelpText>Displays the relationship to the student of the person listed in the Authorized Pickup 2 field.</inlineHelpText>
        <label>Authorized Pickup Relation 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Relation_3__c</fullName>
        <inlineHelpText>Displays the relationship to the student of the person listed in the Authorized Pickup 3 field.</inlineHelpText>
        <label>Authorized Pickup Relation 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Relation_4__c</fullName>
        <inlineHelpText>Displays the relationship to the student of the person listed in the Authorized Pickup 4 field.</inlineHelpText>
        <label>Authorized Pickup Relation 4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Pickup_Relation__c</fullName>
        <inlineHelpText>Displays the relationship to the student of the person listed in the Authorized Pickup 1 field.</inlineHelpText>
        <label>Authorized Pickup Relation 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavior__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SEL/SED</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bell_Study_Participant_FY18__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bell Study Participant FY18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bell_Study_Participant_FY19__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bell Study Participant FY19</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bell_Study_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bell Study Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birth_Place_City__c</fullName>
        <inlineHelpText>Displays the city in which the student was born. If you update this field, SchoolForce updates the corresponding field on the Contact record.</inlineHelpText>
        <label>Birth Place - City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Place_State__c</fullName>
        <inlineHelpText>Displays the state in which the student was born.  If you update this field, SchoolForce updates the corresponding field on the Contact record.</inlineHelpText>
        <label>Birth Place - State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Black_or_African_American__c</fullName>
        <formula>IF( INCLUDES(Race_Multi__c, &apos;Black or African American&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Black or African American</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CY_YOY_Student_EEID__c</fullName>
        <label>CY YOY Student EEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Campus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kansas - Early Childhood</fullName>
                    <color>#0B6FCE</color>
                    <label>Kansas - Early Childhood</label>
                </value>
                <value>
                    <fullName>Georgia - Upper Elementary/Middle School</fullName>
                    <color>#78C953</color>
                    <label>Georgia - Upper Elementary/Middle School</label>
                </value>
                <value>
                    <fullName>Kansas - High School</fullName>
                    <color>#E27001</color>
                    <label>Kansas - High School</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <inlineHelpText>If the student drives to school, this field displays the model of the student&apos;s primary vehicle.</inlineHelpText>
        <label>Car Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Displays the city in which the student lives.</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_ID__c</fullName>
        <description>This is only for internal use.</description>
        <inlineHelpText>This field is used by SchoolForce&apos;s CSV Loader.</inlineHelpText>
        <label>Class ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Rank__c</fullName>
        <inlineHelpText>Displays the student&apos;s performance rank compared to other students in the same graduating class.</inlineHelpText>
        <label>Class Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Students relationship to their cohort</description>
        <inlineHelpText>Displays the cohort to which the student is assigned. You can click on the cohort link to see all students within the cohort.</inlineHelpText>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>College_Bootcamp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Teams will provide 1-on-1 and/or small group support to 11th &amp; 12th grade students in all things college readiness including application completion, essay writing, financial aid applications, and test preparation.</description>
        <label>College Bootcamp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Combined_Final_Grade_Values__c</fullName>
        <inlineHelpText>This field is used by SchoolForce in Final Grade calculations.</inlineHelpText>
        <label>Combined Final Grade Values</label>
        <summarizedField>Final_Grade__c.Total_GPA_Credit_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Final_Grade__c.Exclude_Course_from_GPA__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Final_Grade__c.Final__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Final_Grade__c.Student__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Combined_Weighted_Final_Grade_Values__c</fullName>
        <inlineHelpText>This field is used by SchoolForce in Final Grade calculations.</inlineHelpText>
        <label>Combined Weighted Final Grade Values</label>
        <summarizedField>Final_Grade__c.Total_Weighted_GPA_Credit_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Final_Grade__c.Exclude_Course_from_GPA__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Final_Grade__c.Final__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Final_Grade__c.Student__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Displays the comments teachers enter for the student using the Overall Comments Wizard. This text displays on elementary school report cards and progress reports.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Cohort__c</fullName>
        <formula>Individual__r.Cohort__c</formula>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Contact Cohort*Retired*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>Individual__r.Id</formula>
        <inlineHelpText>Displays the Salesforce identifier for the student&apos;s Contact record. This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Student_Id__c</fullName>
        <formula>Individual__r.Reference_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Contact Student Id*Retired*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <inlineHelpText>Displays the student&apos;s home country.  If you update this field, SchoolForce updates the corresponding field on the Contact record.</inlineHelpText>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Next_Year_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the Student record for the following school year has been created. This field is updated by the EOY Wizard. You should never manually update this field.</inlineHelpText>
        <label>Created Next Year Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_GPA__c</fullName>
        <description>GPA calculations take place in nightly job and stored in this field to display current progress.</description>
        <inlineHelpText>Displays the real-time calculation of the GPA that includes grades from assignments in the courses a student is currently enrolled in as well as the courses a student has completed.</inlineHelpText>
        <label>Current GPA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Meals_Balance__c</fullName>
        <description>This is the current balance for the student&apos;s meals account. Additional money can be added by adding a credit transaction.</description>
        <inlineHelpText>Displays the current balance for the student&apos;s meals account if your school uses the Meals module. You can add additional money by adding a credit transaction in the Meals related list.</inlineHelpText>
        <label>Current Meals Balance</label>
        <summarizedField>Meal_Transaction__c.Transaction_Amount_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>Meal_Transaction__c.Void__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Meal_Transaction__c.Student__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_School_Year__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Current School Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_evaluated_for_special_ed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Currently evaluated for special ed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Resident__c</fullName>
        <inlineHelpText>Indicates whether or not the student is a DC resident. This field is used with Proactive.</inlineHelpText>
        <label>DC Resident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <inlineHelpText>Displays the student&apos;s birth date.</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Enrolled__c</fullName>
        <inlineHelpText>Displays the real-time calculation of the number of days a student has been enrolled for the current school year. To use this field, you must schedule the Days Students Enrolled batch to run nightly.</inlineHelpText>
        <label># of Days Enrolled</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination_School_Type__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Destination School Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public School</fullName>
                </value>
                <value>
                    <fullName>Parochial School</fullName>
                </value>
                <value>
                    <fullName>Private School</fullName>
                </value>
                <value>
                    <fullName>Charter School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination_School__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Destination School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Exit_Reason__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Detailed Exit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disability_Flag__c</fullName>
        <inlineHelpText>Indicates whether or not the student has a disability.</inlineHelpText>
        <label>Disability Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
</CustomObject>